Juan pls fix this vertical align stuff.. my code from the VGDA website doesn't work here

--- a/css/sdgaCustom.css
+++ b/css/sdgaCustom.css
@@ -670,3 +670,27 @@ a.carousel-control-next, a.carousel-control-prev{
 button{
   cursor: pointer;
 }
+
+/* Makes an Invisible Line to all Vertical Alignment */
+/* Use with <span class = "helper"></span> before <img src =...> */
+.helper {
+  content: "";
+  display: inline-block;
+  height: 100px;
+  vertical-align: middle;
+}
+/**Vertically align images**/
+.verticalAlign {
+  max-height:100px;
+  width:100%
+  line-height: 100px;
+  vertical-align: middle;
+}
+
+.circle {
+    border: 8px solid black;
+    background-color: #FFFFFF;
+    height: 200px;
+    border-radius:100%;
+    width: 200px;
+}
